# my-no-sql

./: Cargo.toml
.github/workflows/: build_tests.yaml  tests.yml
my-no-sql/: Cargo.toml
my-no-sql-abstractions/: Cargo.toml
my-no-sql-abstractions/src/: lib.rs  my_no_sql_entity.rs  timestamp_type.rs
my-no-sql-core/: Cargo.toml
my-no-sql-core/src/: entity_serializer.rs  expiration_index.rs  lib.rs
my-no-sql-core/src/db/: mod.rs
my-no-sql-core/src/db/db_partition/: db_partition.rs  db_rows_container.rs  mod.rs  partition_key.rs  partition_key_parameters.rs
my-no-sql-core/src/db/db_row/: db_row.rs  db_row_key.rs  mod.rs  row_key_parameter.rs  test_expires_update.rs
my-no-sql-core/src/db/db_table/: all_db_rows_iterator.rs  avg_size.rs  by_row_key_iterator.rs  data_to_gc.rs  db_partition_expiration_index_owned.rs  db_partitions_container.rs  db_table.rs  db_table_attributes.rs  db_table_master_node.rs  db_table_name.rs  mod.rs
my-no-sql-core/src/db_json_entity/: array_parser.rs  db_json_entity.rs  db_json_entity_with_content.rs  db_row_content_compiler.rs  json_key_value_position.rs  json_time_stamp.rs  mod.rs
my-no-sql-core/src/db_json_entity/db_row_content_compiler/: content_compiler.rs  db_row_content_compiler.rs  mod.rs  small_content_compiler.rs
my-no-sql-data-writer/: Cargo.toml  readme.md
my-no-sql-data-writer/src/: lib.rs  ping_pool.rs  ssh.rs
my-no-sql-data-writer/src/my_no_sql_data_writer/: error.rs  execution.rs  fl_url_ext.rs  fl_url_factory.rs  mod.rs  my_no_sql_data_writer.rs  settings.rs  with_retries.rs
my-no-sql-macros/: Cargo.toml
my-no-sql-macros/src/: entity_utils.rs  lib.rs
my-no-sql-macros/src/enum_model/: generate.rs
my-no-sql-macros/src/enum_of_my_no_sql_entity/: generate.rs
my-no-sql-macros/src/my_no_sql_entity/: generate.rs  generate_base_impl.rs  mod.rs
my-no-sql-sdk/: Cargo.toml
my-no-sql-sdk/src/: lib.rs
my-no-sql-tcp-reader/: Cargo.toml
my-no-sql-tcp-reader/src/: callback_triggers.rs  data_reader_entities_set.rs  lib.rs  my_no_sql_connector.rs  my_no_sql_data_reader.rs  my_no_sql_data_reader_callbacks_pusher.rs  my_no_sql_data_reader_data.rs  my_no_sql_data_reader_inner.rs  my_no_sql_tcp_connection.rs  tcp_events.rs
my-no-sql-tcp-reader/src/get_entities_builder/: get_entities_builder.rs  get_entities_builder_inner.rs  mod.rs
my-no-sql-tcp-reader/src/get_entity_builder/: get_entity_builder.rs  get_entity_builder_inner.rs  mod.rs
my-no-sql-tcp-reader/src/mock/: mock_connection.rs  mock_connection_inner.rs  mod.rs
my-no-sql-tcp-reader/src/subscribers/: callback_triggers.rs  data_reader_update.rs  entity_with_lazy_deserialization.rs  mod.rs  my_no_sql_data_reader.rs  my_no_sql_data_reader_callbacks.rs  my_no_sql_data_reader_callbacks_pusher.rs  my_no_sql_data_reader_data.rs  my_no_sql_data_reader_mock.rs  my_no_sql_data_reader_mock_inner.rs  my_no_sql_data_reader_tcp.rs  subscribers.rs
my-no-sql-tcp-reader/src/subscribers/get_entities_builder/: get_entities_builder.rs  get_entities_builder_inner.rs  get_entities_builder_mock.rs
my-no-sql-tcp-reader/src/subscribers/get_entity_builder/: get_entity_builder.rs  get_entity_builder_inner.rs  get_entity_builder_mock.rs
my-no-sql-tcp-reader/src/tcp/: mod.rs  my_no_sql_tcp_connection.rs  tcp_events.rs
my-no-sql-tcp-shared/: Cargo.toml
my-no-sql-tcp-shared/src/: common_deserializes.rs  common_serializers.rs  delete_row_tcp_contract.rs  lib.rs  payload_compressor.rs  tcp_contracts.rs  tcp_serializer.rs
my-no-sql-tcp-shared/src/sync_to_main/: mod.rs  sync_queues.rs  sync_to_main_node_handler.rs  sync_to_main_node_handler_inner.rs  sync_to_main_node_queue.rs  update_partition_expiration_time_queue.rs  update_partitions_last_read_time_queue.rs  update_rows_expiration_time_queue.rs  update_rows_last_read_time_queue.rs
my-no-sql-tests/: Cargo.toml
my-no-sql-tests/src/: lib.rs  test_my_no_sql_entity.rs  test_same_timestamp.rs  tests_from_real_life.rs
my-no-sql-tests/src/enum_tests/: enum_test.rs  mod.rs
my-no-sql-tests/src/macros_tests/: enum_test.rs
my-no-sql-tests/src/test_new_enum_cases_added/: mod.rs  test_enum_with_added_new_type.rs
