[package]
name = "my-no-sql-core"
version = "0.2.0"
edition = "2021"

[features]
default = []
master-node = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-no-sql-abstractions = { path = "../my-no-sql-abstractions" }
my-json = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-json.git" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio = { version = "*", features = ["full"] }
serde_json = { version = "*" }
serde = { version = "*", features = ["derive"] }
