[package]
name = "my-no-sql-data-writer"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
my-no-sql-abstractions = { path = "../my-no-sql-abstractions" }
my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }
flurl = { tag = "0.5.0", git = "https://github.com/MyJetTools/fl-url" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
