[package]
name = "my-no-sql-data-writer"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
my-no-sql-abstractions = { path = "../my-no-sql-abstractions" }
my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }
flurl = { tag = "0.5.2", git = "https://github.com/MyJetTools/fl-url" }

my-json = { tag = "0.2.4", git = "https://github.com/MyJetTools/my-json.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"

[dev-dependencies]
my-no-sql-core = { path = "../my-no-sql-core" }
