[package]
name = "my-no-sql-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
core = ["dep:my-no-sql-core"]
data-writer = ["dep:my-no-sql-data-writer"]
macros = [
    "dep:my-no-sql-macros",
    "dep:rust-extensions",
    "dep:my-no-sql-abstractions",
]
abstractions = ["dep:my-no-sql-abstractions"]
reader = ["dep:my-no-sql-tcp-reader"]
tcp-contracts = ["dep:my-no-sql-tcp-shared"]

[dependencies]

my-no-sql-core = { optional = true, path = "../my-no-sql-core" }
my-no-sql-data-writer = { optional = true, path = "../my-no-sql-data-writer" }
my-no-sql-macros = { optional = true, path = "../my-no-sql-macros" }
my-no-sql-abstractions = { optional = true, path = "../my-no-sql-abstractions" }
my-no-sql-tcp-reader = { optional = true, path = "../my-no-sql-tcp-reader" }
my-no-sql-tcp-shared = { optional = true, path = "../my-no-sql-tcp-shared" }

rust-extensions = { optional = true, tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
# my_no_sql::macros::my_no_sql_entity
